@@ -10,7 +10,7 @@
         /// <param name="destruction">The desctructive action.</param>
         /// <param name="buttons">The list of actions to be displayed.</param>
         /// <returns>The name of the action that the user has opted for.</returns>
-        Task<string> DisplayActionSheet(string title, string cancel, string destruction, params string[] buttons);
+        Task<string> DisplayActionSheetAsync(string title, string cancel, string destruction, params string[] buttons);
 
         /// <summary>
         /// Displays an alert.
@@ -19,7 +19,7 @@
         /// <param name="message">The message to be shown in the alert.</param>
         /// <param name="cancel">The text on the cancel button.</param>
         /// <returns></returns>
-        Task DisplayAlert(string title, string message, string cancel);
+        Task DisplayAlertAsync(string title, string message, string cancel);
 
         /// <summary>
         /// Displays an alert with an option to accept or cancel.
@@ -29,7 +29,7 @@
         /// <param name="accept">The text on the accept button.</param>
         /// <param name="cancel">The text on the cancel button.</param>
         /// <returns>True, if the user clicks on the <paramref name="accept"/> button, otherwise false.</returns>
-        Task<bool> DisplayAlert(string title, string message, string accept, string cancel);
+        Task<bool> DisplayAlertAsync(string title, string message, string accept, string cancel);
 
         /// <summary>
         /// Displays a prompt to get input from the user.
