@@ -8,7 +8,7 @@
         /// <param name="title">The title of the share dialog.</param>
         /// <param name="text">The text to be shared.</param>
         /// <returns></returns>
-        Task ShareText(string title, string text);
+        Task ShareTextAsync(string title, string text);
 
         /// <summary>
         /// Opens the dialog to share an uri
@@ -17,6 +17,6 @@
         /// <param name="text">The text to be displayed.</param>
         /// <param name="uri">The uri to be shared.</param>
         /// <returns></returns>
-        Task ShareUri(string title, string text, string uri);
+        Task ShareUriAsync(string title, string text, string uri);
     }
 }
